--- a/vignettes/timeseries.Rmd
+++ b/vignettes/timeseries.Rmd
@@ -56,6 +56,17 @@ plot_timeseries(d_week[granularity_geo == "nation"],
                 breaks_y = splstyle::pretty_breaks(5))
 ```
 
+Weekly timeseries for `norge` with points.
+
+```{r}
+plot_timeseries(d_week[granularity_geo == "nation"], 
+                var_y = c("Covid cases" = "covid19_cases_testdate_n"), 
+                breaks_x = every_nth(4), 
+                breaks_y = splstyle::pretty_breaks(5),
+                geom_point = TRUE)
+```
+
+Daily timeseries for `norge`
 
 ```{r}
 plot_timeseries(d_day[granularity_geo == "nation"], 
@@ -92,7 +103,8 @@ plot_timeseries(d_week[granularity_geo == "county"],
               facet_wrap = "location_code",
               breaks_x = every_nth(10), 
               breaks_y = splstyle::pretty_breaks(5),
-              lab_y = "Cases")
+              lab_y = "Cases",
+              geom_point = TRUE)
 ```
 
 
