--- a/vignettes/timeseries.Rmd
+++ b/vignettes/timeseries.Rmd
@@ -72,7 +72,7 @@ Daily timeseries for `norge`
 plot_timeseries(d_day[granularity_geo == "nation"], 
                 var_x = "date",
                 var_y = c("Covid cases" = "covid19_cases_testdate_n"), 
-                breaks_x = every_nth(4), 
+                breaks_x = "1 week", 
                 breaks_y = splstyle::pretty_breaks(5))
 ```
 
