--- a/vignettes/timeseries.Rmd
+++ b/vignettes/timeseries.Rmd
@@ -76,7 +76,6 @@ plot_timeseries(d_day[granularity_geo == "nation"],
                 breaks_y = splstyle::pretty_breaks(5))
 ```
 
-
 ## Timeseries for multiple geographical areas
 
 ### All in one graph
@@ -89,20 +88,40 @@ plot_timeseries(d_week[granularity_geo == "county"],
                 var_group = "location_code")
 ```
 
-
 ### Split into multiple graphs
 
-When we have multiple geographical areas, we use the argument `facet_wrap` to create multiple timeseries.
+When we split the graph into multiple graphs, we use the argument `facet_wrap` to create multiple timeseries.
 
 Weekly timeseries for all of the counties.
+
+### Free scaled y-axis
+
+The default scale for the y-axis is `free`.
 
 ```{r fig.height=10, fig.width=8}
 plot_timeseries(d_week[granularity_geo == "county"],
               var_y = c("Covid cases" = "covid19_cases_testdate_n"), 
               lab_main = "Daily epicurve for all the counties",
               facet_wrap = "location_code",
-              breaks_x = every_nth(10), 
+              breaks_x = every_nth(2), 
               breaks_y = splstyle::pretty_breaks(5),
+              lab_y = "Cases",
+              geom_point = TRUE)
+```
+
+
+### Fixed scaled y-axis
+
+It might be easier to visually compare the different graphs when you have a `fixed` y-axis.
+
+```{r fig.height=10, fig.width=8}
+plot_timeseries(d_week[granularity_geo == "county"],
+              var_y = c("Covid cases" = "covid19_cases_testdate_n"), 
+              lab_main = "Daily epicurve for all the counties",
+              facet_wrap = "location_code",
+              breaks_x = every_nth(2), 
+              breaks_y = splstyle::pretty_breaks(5),
+              scale_y = "fixed",
               lab_y = "Cases",
               geom_point = TRUE)
 ```
