--- a/vignettes/palettes.Rmd
+++ b/vignettes/palettes.Rmd
@@ -23,13 +23,13 @@ knitr::opts_chunk$set(
 
 ```{r}
 library(ggplot2)
-library(splstyle)
+library(csstyle)
 ```
 
 ## Palette
 
 ```{r fig.height=9}
-splstyle::display_all_palettes()
+csstyle::display_all_palettes()
 ```
 
 ## Maps
@@ -52,7 +52,7 @@ Here we have a sequential map:
 q <- ggplot()
 q <- q + geom_polygon(data = pd, aes( x = long, y = lat, group = group, fill=category), color="black", size=0.25)
 q <- q + coord_quickmap()
-q <- q + splstyle::scale_fill_fhi("Category",palette = "map_seq_complete", direction = 1)
+q <- q + csstyle::scale_fill_fhi("Category",palette = "map_seq_complete", direction = 1)
 q <- q + labs(title="Palette: 'map_seq_complete'")
 q <- q + theme_void()
 q
@@ -64,7 +64,7 @@ Here we have a diverging map:
 q <- ggplot()
 q <- q + geom_polygon(data = pd, aes( x = long, y = lat, group = group, fill=category), color="black", size=0.25)
 q <- q + coord_quickmap()
-q <- q + splstyle::scale_fill_fhi("Category",palette = "map_div_complete", direction = 1)
+q <- q + csstyle::scale_fill_fhi("Category",palette = "map_div_complete", direction = 1)
 q <- q + labs(title="Palette: 'map_div_complete'")
 q <- q + theme_void()
 q
@@ -76,7 +76,7 @@ Here we have a sequential map with missing:
 q <- ggplot()
 q <- q + geom_polygon(data = pd, aes( x = long, y = lat, group = group, fill=category_with_missing), color="black", size=0.25)
 q <- q + coord_quickmap()
-q <- q + splstyle::scale_fill_fhi("Category",palette = "map_seq_missing", direction = 1)
+q <- q + csstyle::scale_fill_fhi("Category",palette = "map_seq_missing", direction = 1)
 q <- q + labs(title="Palette: 'map_seq_missing'")
 q <- q + theme_void()
 q
@@ -88,7 +88,7 @@ Here we have a diverging map with missing:
 q <- ggplot()
 q <- q + geom_polygon(data = pd, aes( x = long, y = lat, group = group, fill=category_with_missing), color="black", size=0.25)
 q <- q + coord_quickmap()
-q <- q + splstyle::scale_fill_fhi("Category",palette = "map_div_missing", direction = 1)
+q <- q + csstyle::scale_fill_fhi("Category",palette = "map_div_missing", direction = 1)
 q <- q + labs(title="Palette: 'map_div_missing'")
 q <- q + theme_void()
 q
@@ -99,7 +99,7 @@ q
 ```{r}
 q <- ggplot(diamonds[1:200,], aes(carat, depth, color = cut))
 q <- q + geom_point(size = 4)
-q <- q + splstyle::scale_color_fhi(palette = "primary")
+q <- q + csstyle::scale_color_fhi(palette = "primary")
 q <- q + labs(title="Palette: 'primary'")
 q <- q + theme_fhi_basic()
 q
@@ -108,7 +108,7 @@ q
 ```{r}
 q <- ggplot(diamonds[1:200,], aes(carat, depth, color = cut))
 q <- q + geom_point(size = 4)
-q <- q + splstyle::scale_color_fhi(palette = "combination")
+q <- q + csstyle::scale_color_fhi(palette = "combination")
 q <- q + labs(title="Palette: 'combination'")
 q <- q + theme_fhi_basic()
 q
@@ -117,7 +117,7 @@ q
 ```{r}
 q <- ggplot(diamonds[1:200,], aes(carat, depth, color = cut))
 q <- q + geom_point(size = 4)
-q <- q + splstyle::scale_color_fhi(palette = "contrast")
+q <- q + csstyle::scale_color_fhi(palette = "contrast")
 q <- q + labs(title="Palette: 'contrast'")
 q <- q + theme_fhi_basic()
 q
@@ -130,7 +130,7 @@ We first try some barcharts with the `primary` palette and two different themes:
 ```{r}
 q <- ggplot(diamonds, aes(x=color, fill = cut))
 q <- q + geom_bar()
-q <- q + splstyle::scale_fill_fhi(palette = "primary")
+q <- q + csstyle::scale_fill_fhi(palette = "primary")
 q <- q + labs(title="Palette: 'primary'")
 q <- q + theme_fhi_basic()
 q
@@ -139,7 +139,7 @@ q
 ```{r}
 q <- ggplot(diamonds, aes(x=color, fill = cut))
 q <- q + geom_bar()
-q <- q + splstyle::scale_fill_fhi(palette = "combination")
+q <- q + csstyle::scale_fill_fhi(palette = "combination")
 q <- q + labs(title="Palette: 'combination'")
 q <- q + theme_fhi_basic()
 q
@@ -148,7 +148,7 @@ q
 ```{r}
 q <- ggplot(diamonds, aes(x=color, fill = cut))
 q <- q + geom_bar()
-q <- q + splstyle::scale_fill_fhi(palette = "contrast")
+q <- q + csstyle::scale_fill_fhi(palette = "contrast")
 q <- q + labs(title="Palette: 'contrast'")
 q <- q + theme_fhi_basic()
 q
