--- a/vignettes/splstyle.Rmd
+++ b/vignettes/splstyle.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction to splstyle"
+title: "Introduction to csstyle"
 author: "Richard White, Chi Zhang"
 date: "`r Sys.Date()`"
 output:
@@ -7,7 +7,7 @@ output:
     fig_width: 6
     fig_height: 6
 vignette: >
-  %\VignetteIndexEntry{Introduction to splstyle}
+  %\VignetteIndexEntry{Introduction to csstyle}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -24,11 +24,11 @@ knitr::opts_chunk$set(
 ## Checklist
 
 - Make sure that your dataset contains all days/weeks (i.e. there can be days/weeks with 0 cases)
-- Use `q <- q + splstyle::theme_fhi_lines_horizontal()`
-- Use `q <- q + geom_col(fill = splstyle::base_color, width = 0.8)`
-- For `scale_y_continuous` use `breaks = splstyle::pretty_breaks(5)`
+- Use `q <- q + csstyle::theme_fhi_lines_horizontal()`
+- Use `q <- q + geom_col(fill = csstyle::base_color, width = 0.8)`
+- For `scale_y_continuous` use `breaks = csstyle::pretty_breaks(5)`
 - For `scale_y_continuous` use `expand = expansion(mult = c(0, 0.1))`
-- If the x-axis is too cramped, make the labels vertical `q <- q + splstyle::set_x_axis_vertical()`
+- If the x-axis is too cramped, make the labels vertical `q <- q + csstyle::set_x_axis_vertical()`
 - Say when your data was extracted `q <- q + labs(caption = "Data extracted on 2018-02-20")`
 
 If multiple geographical areas:
@@ -37,7 +37,7 @@ If multiple geographical areas:
 ```{r}
 library(ggplot2)
 library(data.table)
-library(splstyle)
+library(csstyle)
 ```
 
 ## Data
@@ -127,15 +127,15 @@ Daily epicurve for `county01`
 
 ```{r}
 q <- ggplot(d[location_code=="county03"], aes(x = date, y = N))
-q <- q + geom_col(fill = splstyle::base_color, width = 0.8)
+q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
 q <- q + scale_x_date("Date")
 q <- q + scale_y_continuous("Number of reported cases",
-  breaks = splstyle::pretty_breaks(5),
+  breaks = csstyle::pretty_breaks(5),
   expand = expansion(mult = c(0, 0.1))
 )
 q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
 q <- q + labs(caption = fhi_caption())
-q <- q + splstyle::theme_fhi_lines_horizontal()
+q <- q + csstyle::theme_fhi_lines_horizontal()
 q
 ```
 
@@ -143,15 +143,15 @@ Weekly epicurve for `county01`
 
 ```{r}
 q <- ggplot(w[location_code=="county03"], aes(x = isoyearweek, y = N))
-q <- q + geom_col(fill = splstyle::base_color, width = 0.8)
+q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
 q <- q + scale_x_discrete("Isoweek")
 q <- q + scale_y_continuous("Number of reported cases",
-  breaks = splstyle::pretty_breaks(5),
+  breaks = csstyle::pretty_breaks(5),
   expand = expansion(mult = c(0, 0.1))
 )
 q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
 q <- q + labs(caption = fhi_caption())
-q <- q + splstyle::theme_fhi_lines_horizontal()
+q <- q + csstyle::theme_fhi_lines_horizontal()
 q
 ```
 
@@ -159,16 +159,16 @@ Weekly epicurve with vertical x-axis labels
 
 ```{r}
 q <- ggplot(w, aes(x = isoyearweek, y = N))
-q <- q + geom_col(fill = splstyle::base_color, width = 0.8)
+q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
 q <- q + scale_x_discrete("Isoweek")
 q <- q + scale_y_continuous("Number of reported cases",
-  breaks = splstyle::pretty_breaks(5),
+  breaks = csstyle::pretty_breaks(5),
   expand = expansion(mult = c(0, 0.1))
 )
 q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
 q <- q + labs(caption = fhi_caption())
-q <- q + splstyle::theme_fhi_lines_horizontal()
-q <- q + splstyle::set_x_axis_vertical()
+q <- q + csstyle::theme_fhi_lines_horizontal()
+q <- q + csstyle::set_x_axis_vertical()
 q
 ```
 
@@ -180,18 +180,18 @@ Daily epicurve for all geographical areas with vertical x-axis labels
 
 ```{r fig.height=10, fig.width=8}
 q <- ggplot(d, aes(x = date, y = N))
-q <- q + geom_col(fill = splstyle::base_color, width = 0.8)
+q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
 q <- q + lemon::facet_rep_wrap(~location_code, repeat.tick.labels = "y")
-q <- q + splstyle::scale_fill_fhi("Location",palette="primary")
+q <- q + csstyle::scale_fill_fhi("Location",palette="primary")
 q <- q + scale_x_date("Date")
 q <- q + scale_y_continuous("Number of reported cases",
-  breaks = splstyle::pretty_breaks(5),
+  breaks = csstyle::pretty_breaks(5),
   expand = expansion(mult = c(0, 0.1))
 )
 q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
 q <- q + labs(caption = fhi_caption())
-q <- q + splstyle::theme_fhi_lines_horizontal()
-q <- q + splstyle::set_x_axis_vertical()
+q <- q + csstyle::theme_fhi_lines_horizontal()
+q <- q + csstyle::set_x_axis_vertical()
 q
 ```
 
@@ -199,18 +199,18 @@ Weekly epicurve with vertical x-axis labels
 
 ```{r fig.height=10, fig.width=8}
 q <- ggplot(d, aes(x = isoyearweek, y = N))
-q <- q + geom_col(fill = splstyle::base_color, width = 0.8)
+q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
 q <- q + lemon::facet_rep_wrap(~location_code, repeat.tick.labels = "y", ncol=4)
 q <- q + scale_fill_fhi("Location",palette="primary")
 q <- q + scale_x_discrete("Isoweek")
 q <- q + scale_y_continuous("Number of reported cases",
-  breaks = splstyle::pretty_breaks(5),
+  breaks = csstyle::pretty_breaks(5),
   expand = expansion(mult = c(0, 0.1))
 )
 q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
 q <- q + labs(caption = fhi_caption())
 q <- q + theme_fhi_lines_horizontal()
-q <- q + splstyle::set_x_axis_vertical()
+q <- q + csstyle::set_x_axis_vertical()
 q
 ```
 
@@ -227,16 +227,16 @@ q <- ggplot(w[location_code %in% c(
   "county34")], 
   aes(x = isoyearweek, y = N, fill = location_code))
 q <- q + geom_col(width = 0.8)
-q <- q + splstyle::scale_fill_fhi("Location",palette="primary")
+q <- q + csstyle::scale_fill_fhi("Location",palette="primary")
 q <- q + scale_x_discrete("Isoweek")
 q <- q + scale_y_continuous("Number of reported cases",
-  breaks = splstyle::pretty_breaks(5),
+  breaks = csstyle::pretty_breaks(5),
   expand = expansion(mult = c(0, 0.1))
 )
 q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
 q <- q + labs(caption = fhi_caption())
-q <- q + splstyle::theme_fhi_lines_horizontal()
-q <- q + splstyle::set_x_axis_vertical()
+q <- q + csstyle::theme_fhi_lines_horizontal()
+q <- q + csstyle::set_x_axis_vertical()
 q
 ```
 
@@ -278,20 +278,20 @@ q <- q + geom_line(
   )
 q <- q + scale_x_discrete("Isoweek")
 q <- q + scale_y_continuous("Number of reported cases",
-  breaks = splstyle::pretty_breaks(5),
+  breaks = csstyle::pretty_breaks(5),
   expand = expansion(mult = c(0, 0.1)),
   sec.axis = sec_axis(
     name = "Cumulative number of reported cases\n",
     ~ . * max_right / max_left,
-    breaks = splstyle::pretty_breaks(5),
-    labels = splstyle::format_nor
+    breaks = csstyle::pretty_breaks(5),
+    labels = csstyle::format_nor
   )
 )
-q <- q + splstyle::scale_fill_fhi("Fill", palette = "primary")
-q <- q + splstyle::scale_color_fhi("Color", palette = "posneg")
+q <- q + csstyle::scale_fill_fhi("Fill", palette = "primary")
+q <- q + csstyle::scale_color_fhi("Color", palette = "posneg")
 q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
 q <- q + labs(caption = fhi_caption())
-q <- q + splstyle::theme_fhi_lines_horizontal()
-q <- q + splstyle::set_x_axis_vertical()
+q <- q + csstyle::theme_fhi_lines_horizontal()
+q <- q + csstyle::set_x_axis_vertical()
 q
 ```
