--- a/vignettes/maps.Rmd
+++ b/vignettes/maps.Rmd
@@ -23,11 +23,11 @@ knitr::opts_chunk$set(
 
 ## Maps with inset for Oslo and Akershus
 
-We start with the standard map `fhidata::norway_map_counties_b2020` and provide data:
+We start with the standard map `csmaps::nor_county_map_b2020_default_dt` and provide data:
 
 ```{r}
 # start off with base map
-pd <- fhimaps::norway_nuts3_map_b2020_insert_oslo_dt
+pd <- csmaps::nor_county_map_b2020_default_dt
 
 # create some fictional data
 data <- unique(pd[,c("location_code")])
