--- a/vignettes/epicurves.Rmd
+++ b/vignettes/epicurves.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Epicurves"
-author: "Richard"
-date: "`r Sys.Date()`"
+author: "Richard Aubrey White"
+date: "2020-04-10"
 output:
   rmarkdown::html_vignette:
     fig_width: 6
@@ -111,10 +111,10 @@ print(w)
 
 ## Graphs for one geographical area
 
-Daily epicurve for `county01`
+Daily epicurve for `county_nor03`
 
 ```{r}
-q <- ggplot(d[location_code=="county03"], aes(x = date, y = N))
+q <- ggplot(d[location_code=="county_nor03"], aes(x = date, y = N))
 q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
 q <- q + scale_x_date("Date")
 q <- q + scale_y_continuous("Number of reported cases",
@@ -127,10 +127,10 @@ q <- q + csstyle::theme_fhi_lines_horizontal()
 q
 ```
 
-Weekly epicurve for `county01`
+Weekly epicurve for `county_nor03`
 
 ```{r}
-q <- ggplot(w[location_code=="county03"], aes(x = isoyearweek, y = N))
+q <- ggplot(w[location_code=="county_nor03"], aes(x = isoyearweek, y = N))
 q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
 q <- q + scale_x_discrete("Isoweek")
 q <- q + scale_y_continuous("Number of reported cases",
@@ -208,11 +208,11 @@ Sometimes you would like to add colours to differentiate between different varia
 
 ```{r}
 q <- ggplot(w[location_code %in% c(
-  "county03",
-  "county11",
-  "county15",
-  "county30",
-  "county34")], 
+  "county_nor03",
+  "county_nor11",
+  "county_nor15",
+  "county_nor30",
+  "county_nor34")], 
   aes(x = isoyearweek, y = N, fill = location_code))
 q <- q + geom_col(width = 0.8)
 q <- q + csstyle::scale_fill_fhi("Location",palette="primary")
@@ -233,7 +233,7 @@ q
 Sometimes you would like to add colours to differentiate between different variables. This can be done through the `fill` attribute.
 
 ```{r}
-pd <- w[location_code %in% "county03"]
+pd <- w[location_code %in% "county_nor03"]
 pd[, cum_n := cumsum(N)]
 
 pd[, value_left := N]
